--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 .orange-color{
     color: orange;
 }
+section{
+    display: flex;
+}
+.half-width{
+    width: 70%;
+    padding-left: 5%;
+}
+.half-width img{
+     width: 55%;
+     
+}
