--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
 .orange-color{
     color: orange;
 }
 section{
     display: flex;
+    
 }
 .half-width{
     width: 70%;
     padding-left: 5%;
 }
 .half-width img{
-     width: 55%;
+     width: 80%;
      
+}
+.link-button{
+    text-decoration: none;
+    background-color: orange;
+    padding: 10px 40px;
+    font-weight: 700;
+    color: white;
+    border-radius: 5px;
+
+}
+.top-banner{
+    background-image: url(image/top-banner.png);
+    background-repeat: no-repeat;
 }
