--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
     
@@ -37,3 +37,20 @@ section{
     background-repeat: no-repeat;
     background-position: right;
 }
+.experience-iteam{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px;
+}
+.experience-area{
+    background-image: url(image/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack-developer{
+    border-left: 7px solid tomato;
+}
+#baby-web-developer{
+   border-left: 7px solid blue;
