--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     font-family: 'Poppins', sans-serif;
-    margin: 0;
+}
+h1{
+   font-size: xx-large
 }
 .orange-color{
     color: orange;
